// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BentoTile renders in expyrico theme 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Milk, Expires Fri"
      accessibilityRole="summary"
      accessible={true}
      style={
        [
          {
            "aspectRatio": 1,
            "flex": 1,
          },
          {
            "backgroundColor": "#FAFAF8",
            "borderColor": "#F0F0ED",
            "borderRadius": 16,
            "borderWidth": 1,
            "minHeight": 88,
            "padding": 18,
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#2C2C28",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 22,
          }
        }
      >
        Milk
      </Text>
      <Text
        style={
          {
            "color": "#8C8C85",
            "fontSize": 12,
            "lineHeight": 18,
            "marginTop": 4,
          }
        }
      >
        Expires Fri
      </Text>
    </View>
  </View>
</View>
`;

exports[`BentoTile renders in expyricoDark theme 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="Milk, Expires Fri"
      accessibilityRole="summary"
      accessible={true}
      style={
        [
          {
            "aspectRatio": 1,
            "flex": 1,
          },
          {
            "backgroundColor": "#191F1B",
            "borderColor": "#2D3A34",
            "borderRadius": 16,
            "borderWidth": 1,
            "minHeight": 88,
            "padding": 18,
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#FAFAF8",
            "fontSize": 16,
            "fontWeight": "500",
            "lineHeight": 22,
          }
        }
      >
        Milk
      </Text>
      <Text
        style={
          {
            "color": "#B7BDB7",
            "fontSize": 12,
            "lineHeight": 18,
            "marginTop": 4,
          }
        }
      >
        Expires Fri
      </Text>
    </View>
  </View>
</View>
`;
